Changes in QMPlay2 build 17.04.08:
	- automatically reconnect network streams on error (fixes some problems with YouTube playback),
	- minor network backward seeking bugfix (regression),
	- option to reconnect live network streams on error,
	- CUVID bugfix,

Changes in QMPlay2 build 17.04.02:
	- seek to 0 position when repeat entry is enabled,
	- fix drawing smooth cover images (regression),
	- updated Russian translation (victorr2007),
	- high dpi scaling enabled only for macOS,
	- use SVG icons (new QtSvg dependency),
	- fixed "QMPlay2.appdata.xml" file,
	- handle multimedia keys on macOS,
	- minor network seeking fixes,
	- bugfix,

Changes in QMPlay2 build 17.03.17:
	- playlists from MediaBrowser and YouTube are no longer loaded by temporary file,
	- replace Http class by NetworkAccess and use it in more places,
	- use Freedesktop notifications for all notifications (option),
	- use macOS native notifications for additional notifications,
	- option to enable/disable still images (disabled by default),
	- show notification about new version on Linux and macOS,
	- save playlists with relative file path (autodetection),
	- added option to toggle playback on left mouse button,
	- add XSPF support (thanks Zamarin Arthur for help),
	- merge ProstoPleer and SoundCloud in MediaBrowser,
	- allow to load profile from command line argument,
	- move YouTubeDL from YouTube to shared library:
		- "youtube-dl" is downloaded automatically without question (if necessary),
		- you can see notifications about downloading/updating "youtube-dl",
		- "youtube-dl" can be removed from settings,
	- add Anime Odcinki and Wbijam to MediaBrowser,
	- rename "Notifies" module to "Notify" module,
	- add SoundCloud support (Zamarin Arthur),
	- CMake improvements for Windows host,
	- better HiDPI support (Qt5 only),
	- allow to run in portable mode,
	- move version to source file,
	- API versioning for modules,
	- add "appdata.xml" file,
	- add Tekstowo lyrics,
	- switch to C++11,