@@ -4,7 +4,6 @@ User can type any aspect ratio and zoom
 Video preview on progress bar
 Improve radio stations
 Downloading subtitles
-Accurate seeking
 Video cropping
 
 Add audio filters:
