@@ -86,6 +86,8 @@ public:
 	}
 
 private:
+	bool isABRepeat() const;
+
 	inline bool hasVideoStream();
 	inline bool hasAudioStream();
 
@@ -125,7 +127,7 @@ private:
 
 	double frame_last_pts, frame_last_delay, audio_current_pts, audio_last_delay;
 	bool doSilenceOnStart, canUpdatePos, paused, waitForData, flushVideo, flushAudio, muted, reload, nextFrameB, endOfStream, ignorePlaybackError;
-	int seekTo, lastSeekTo, restartSeekTo, seekA, seekB;
+	int seekTo, lastSeekTo, restartSeekTo, seekA, seekB, videoSeekPos, audioSeekPos;
 	double vol[2], replayGain, zoom, pos, skipAudioFrame, videoSync, speed, subtitlesSync, subtitlesScale;
 	int flip;
 	bool rotate90, spherical, stillImage;
