@@ -1,5 +1,6 @@
 Changes in QMPlay2 build 17.04.08:
 	- automatically reconnect network streams on error (fixes some problems with YouTube playback),
+	- accurate seeking (available in playback settings, enabled for network streams by default),
 	- minor network backward seeking bugfix (regression),
 	- option to reconnect live network streams on error,
 	- CUVID bugfix,
